# tree-sitter-sixtyfps

./: .gitignore  Cargo.toml  Makefile  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
contrib/: lsp-sixtyfps.el  sixtyfps-mode.el
examples/: Makefile  known-failures.txt
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: documents.txt  elements.txt  expressions.txt  statements.txt
test/highlight/: elements.60  expressions.60
