[package]
name = "tree-sitter-sixtyfps"
description = "SixtyFPS grammar for the tree-sitter parsing library"
version = "0.0.0"
keywords = ["incremental", "parsing", "sixtyfps"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/yuja/tree-sitter-sixtyfps"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
